Actions
Bug #11590
closedunused variables in pcie
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
A sparc build fails with:
../../common/io/pciex/pcie.c:3036: error: unused variable 'ev_attr_list' [-Wunused-variable]
../../common/io/pciex/pcie.c:3035: error: unused variable 'eid' [-Wunused-variable]
../../common/io/pciex/pcie.c:3034: error: unused variable 'se_val' [-Wunused-variable]
../../common/io/pciex/pcie.c:3033: error: unused variable 'se' [-Wunused-variable]
../../common/io/pciex/pcie.c:3032: error: unused variable 'cdip' [-Wunused-variable]
Now, the pcie Makefile on intel gags the unused variable warning
CERRWARN += -_gcc=-Wno-unused-variable
But sparc doesn't have the gag, so we trip over any unused variables if they were to be introduced.
Updated by Electric Monk almost 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 06756f4eb3dca79934574cacc46bd5a99cee195d
commit 06756f4eb3dca79934574cacc46bd5a99cee195d Author: Peter Tribble <peter.tribble@gmail.com> Date: 2019-08-26T19:35:18.000Z 11590 unused variables in pcie Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions