11590 unused variables in pcie Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Garrett D'Amore <garrett@damore.org>